--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         .back {
             transform: rotateY(180deg);
-            background: white;
+            background: rgb(88, 220, 224);
             padding: 20px;
             display: flex;
             justify-content: center;
@@ -115,7 +115,7 @@
             justify-content: center;
             padding: 10px;
             gap: 2px;
-            z-index: -2;
+            z-index: 10;
             background: linear-gradient(to top, rgba(0,0,0,0.2), transparent);
         }
 
